Arreglando la dashboard al cambiar de ventana
+Si bien la dashboard no ha sido arreglado completamente ya es un poco más pesentable

--- a/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/contratos/contratos.component.html
@@ -20,7 +20,7 @@
   <button class="combo-box">Buscar</button>
 </div>
 
-<div style="height: 20px"></div>
+<div style="height: 20px" class="table-container"></div>
 
 <table>
   <thead>
