--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.css
@@ -6,12 +6,11 @@
 }
 
 .dashboard {
-  width: 300px; /* Mantiene el ancho fijo del dashboard */
+  width: 300px; /* Ancho fijo del dashboard */
   background-color: #3CB371;
   padding: 20px;
-  margin: 0;
   font-family: 'Times New Roman', Times, serif;
-  height: auto;
+  overflow-y: auto; /* Habilita scroll si el contenido del dashboard excede su altura */
 }
 
 .dashboard .logo {
@@ -46,6 +45,7 @@
   display: flex;
   flex-direction: column;
   margin:0;
+  min-height: 100vh;
 }
 
 .search-bar {
