Realizando grandes avances
+Se vinculó el back-end con el front-end
+Se realizó la comprobación del login
+Se realizó la diferenciación entre un administrador y un usuario común en el login y como página  emergente

--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -42,9 +42,9 @@
         <div style="width: 50px"></div>
       </div>
       <div class="user-buttons">
-        <button routerLink = '/Usuario'>Usuario 👤</button>
-        <button routerLink = '/Ajustes'>Ajustes ⚙️</button>
-        <button routerLink = '/Notificaciones'>Notificaciones 🔔</button>
+        <button routerLink = '/UsuarioUsers'>Usuario 👤</button>
+        <button routerLink = '/AjustesUsers'>Ajustes ⚙️</button>
+        <button routerLink = '/NotificacionesUsers'>Notificaciones 🔔</button>
       </div>
     </header>
 
