--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -20,6 +20,15 @@
     <button routerLink="/principalPage/Opcion6">Opción 6</button>
     <button routerLink="/principalPage/Opcion7">Opción 7</button>
 
+
+    <div style="height: 20px;"></div>
+
+    <div style="font-size: 25px;font-weight: bold; color: white"  >Opciones de administrador: </div>
+    <div style="height: 20px;"></div>
+    <button routerLink="/principalPage/ManipularUsuarios">Manipular Usuarios</button>
+
+
+
   </aside>
 
   <!-- Contenido principal -->
