Mejorando CRUD usuarios
+A los usuarios ahora se les pueden ver todos los atributos desde el front-end

--- a/Cliente_web/Cliente_webFront/src/app/manipular-usuarios/manipular-usuarios.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/manipular-usuarios/manipular-usuarios.component.html
@@ -17,7 +17,9 @@
         <th>Usuario</th>
         <th>RUT</th>
         <th>Nombre</th>
+        <th>Apellido</th>
         <th>Correo</th>
+        <th>Teléfono</th>
         <th>Rol</th>
       </tr>
       </thead>
@@ -27,7 +29,9 @@
         <td>{{ usuario.usuario }}</td>
         <td>{{ usuario.rut }}</td>
         <td>{{ usuario.nombre }}</td>
+        <td>{{ usuario.apellido}}</td>
         <td>{{ usuario.correo }}</td>
+        <td>{{ usuario.telefono}}</td>
         <td>{{ usuario.rol }}</td>
       </tr>
       </tbody>
