--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -25,7 +25,7 @@
 
     <div style="font-size: 25px;font-weight: bold; color: white"  >Opciones de administrador: </div>
     <div style="height: 20px;"></div>
-    <button routerLink="/principalPage/ManipularUsuarios">Manipular Usuarios</button>
+    <button routerLink="/principalPage/GestionarUsuarios">Gestionar Usuarios</button>
 
 
 
