--- a/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div>
-    <label for="opciones2" style="margin-right: 10px;">Seleccione la siguiente opción:</label>
+    <label for="opciones2" style="margin-left: -10px;">Seleccione la siguiente opción:</label>
     <select id="opciones2" name="opciones" class="combo-box">
       <option value="opcion1">De Primero al Último</option>
       <option value="opcion2">De Último al Primero</option>
@@ -23,477 +23,46 @@
   <button class="combo-box">Buscar</button>
 </div>
 
+<div style="height: 30px"></div>
+
+<div class="botonesCrud-container">
+  <button class="botonesCrud">Crear Representante</button>
+  <button class="botonesCrud">Actualizar Representante</button>
+  <button class="botonesCrud">Eliminar Representante</button>
+</div>
+
+
+
+
 <div style="height: 20px"></div>
 
 
 <table>
   <thead>
   <tr class="encabezado">
+    <td>ID</td>
     <td>RUT</td>
     <td>Nombre</td>
     <td>Apellido</td>
-    <td>Dirección</td>
     <td>Teléfono</td>
     <td>Correo</td>
-    <td>Acceso</td>
   </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-
   </thead>
+  <tbody>
+  <tr *ngFor="let representante of representantes">
+    <td>{{ representante.id }}</td>
+    <td>{{ representante.rut }}</td>
+    <td>{{ representante.nombre }}</td>
+    <td>{{ representante.apellido }}</td>
+    <td>{{ representante.telefono }}</td>
+    <td>{{ representante.correo }}</td>
+
+  </tr>
+  </tbody>
 </table>
 
-<div style="height: 20px"></div>
+
+<div style="height: 50px"></div>
 
 <div style="display: flex; justify-content: space-between; width: 100%;">
   <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
