--- a/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/representantes/representantes.component.css
@@ -309,3 +309,34 @@ button {
   cursor: pointer;
 }
 
+/*=======================================================*/
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  width: 400px;
+  text-align: center;
+}
+
+.modal-actions {
+  margin-top: 20px;
+}
+
+.modal-actions button {
+  margin: 0 10px;
+}
+
