--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -22,6 +22,14 @@
   <button class="combo-box">Buscar</button>
 </div>
 
+<div style="height: 30px"></div>
+
+<div class="botonesCrud-container">
+  <button class="botonesCrud" (click)="abrirModalCrear()">Crear Proveedor</button>
+  <button class="botonesCrud">Actualizar Proveedor</button>
+  <button class="botonesCrud">Eliminar Proveedor</button>
+</div>
+
 <div style="height: 20px"></div>
 
 
@@ -31,470 +39,65 @@
     <td>RUT</td>
     <td>Razón Social</td>
     <td>Dirección</td>
+    <td>Comuna</td>
     <td>Teléfono</td>
     <td>Correo</td>
-    <td>Repesentante</td>
-    <td>Acceso</td>
+    <td>Representante</td>
   </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-
   </thead>
+  <tbody>
+  <tr *ngFor="let proveedor of proveedores">
+    <td>{{ proveedor.rut }}</td>
+    <td>{{ proveedor.razon_social }}</td>
+    <td>{{ proveedor.direccion }}</td>
+    <td>{{ proveedor.comuna}}</td>
+    <td>{{ proveedor.telefono }}</td>
+    <td>{{ proveedor.correo }}</td>
+    <td>{{ proveedor.representante }}</td>
+  </tr>
+  </tbody>
 </table>
 
-<div style="height: 20px"></div>
+<div style="height: 50px"></div>
 
 <div style="display: flex; justify-content: space-between; width: 100%;">
   <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
   <button class="buttons" style="flex: 1;">Página Siguiente</button>
+</div>
+
+<!--============================================================== MODALES =============================================================== -->
+
+<!-- Modal -->
+<div id="modalCrear" class="modal">
+  <div class="modal-content">
+    <span class="cerrar" (click)="cerrarModalCrear()">&times;</span>
+    <h2>Crear Proveedor</h2>
+    <form id="formCrear">
+      <label>RUT:</label>
+      <input type="text" id="rut" required>
+
+      <label>Razón Social:</label>
+      <input type="text" id="razon_social" required>
+
+      <label>Dirección:</label>
+      <input type="text" id="direccion" required>
+
+      <label>Comuna:</label>
+      <input type="number" id="comuna" required>
+
+      <label>Teléfono:</label>
+      <input type="tel" id="telefono" required>
+
+      <label>Correo:</label>
+      <input type="email" id="correo" required>
+
+      <label>Representante:</label>
+      <input type="number" id="representante" required>
+
+      <div class="botones">
+        <button type="button" (click)="cerrarModalCrear()">Cancelar</button>
+        <button type="submit">Crear Usuario</button>
+      </div>
+    </form>
+  </div>
 </div>
