--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -1,5 +1,6 @@
 <h1>Proveedores</h1>
 
+<!-- Filtros y búsqueda -->
 <div style="display: flex; align-items: center; gap: 150px;">
   <div>
     <label for="opciones" style="margin-right: 10px;">Selecciona una opción:</label>
@@ -24,6 +25,7 @@
 
 <div style="height: 30px"></div>
 
+<!-- Botones CRUD -->
 <div class="botonesCrud-container">
   <button class="botonesCrud" (click)="abrirModalCrear()">Crear Proveedor</button>
   <button class="botonesCrud">Actualizar Proveedor</button>
@@ -32,10 +34,11 @@
 
 <div style="height: 20px"></div>
 
-
+<!-- Tabla de Proveedores -->
 <table>
   <thead>
   <tr class="encabezado">
+    <td>Seleccionar</td> <!-- Checkbox para seleccionar todos -->
     <td>RUT</td>
     <td>Razón Social</td>
     <td>Dirección</td>
@@ -46,7 +49,8 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let proveedor of proveedores">
+  <tr *ngFor="let proveedor of proveedores; let i = index">
+    <td><input type="checkbox" [(ngModel)]="proveedorSeleccionado[i]" /></td> <!-- Checkbox individual -->
     <td>{{ proveedor.rut }}</td>
     <td>{{ proveedor.razon_social }}</td>
     <td>{{ proveedor.direccion }}</td>
@@ -58,12 +62,15 @@
   </tbody>
 </table>
 
+
 <div style="height: 50px"></div>
 
+<!-- Paginación -->
 <div style="display: flex; justify-content: space-between; width: 100%;">
   <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
   <button class="buttons" style="flex: 1;">Página Siguiente</button>
 </div>
+
 
 <!--============================================================== MODALES =============================================================== -->
 
