--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -27,9 +27,9 @@
 
 <!-- Botones CRUD -->
 <div class="botonesCrud-container">
-  <button class="botonesCrud" (click)="abrirModalCrear()">Crear Proveedor</button>
-  <button class="botonesCrud">Actualizar Proveedor</button>
-  <button class="botonesCrud">Eliminar Proveedor</button>
+  <button class="botonesCrud" (click)="abrirModalProveedorCrear()">Crear Proveedor</button>
+  <button class="botonesCrud" (click)="actualizarProveedor()">Actualizar Proveedor</button>
+  <button class="botonesCrud" (click)="eliminarProveedor()">Eliminar Proveedor</button>
 </div>
 
 <div style="height: 20px"></div>
@@ -50,18 +50,20 @@
   </thead>
   <tbody>
   <tr *ngFor="let proveedor of proveedores; let i = index">
-    <td><input type="checkbox" [(ngModel)]="proveedorSeleccionado[i]" /></td> <!-- Checkbox individual -->
+    <td>
+      <input type="checkbox" (change)="onCheckboxChange(i)"
+             [checked]="proveedorSeleccionado[i]" />
+    </td> <!-- Checkbox individual -->
     <td>{{ proveedor.rut }}</td>
     <td>{{ proveedor.razon_social }}</td>
     <td>{{ proveedor.direccion }}</td>
-    <td>{{ proveedor.comuna}}</td>
+    <td>{{ proveedor.comuna }}</td>
     <td>{{ proveedor.telefono }}</td>
     <td>{{ proveedor.correo }}</td>
     <td>{{ proveedor.representante }}</td>
   </tr>
   </tbody>
 </table>
-
 
 <div style="height: 50px"></div>
 
@@ -72,39 +74,88 @@
 </div>
 
 
-<!--============================================================== MODALES =============================================================== -->
+<!-- ==================================================== MODALES ======================================================-->
 
-<!-- Modal -->
-<div id="modalCrear" class="modal">
+<!-- Modal Crear -->
+<div id="modalCrear" class="modal" [ngClass]="{'show': modalAbiertoCrear}">
   <div class="modal-content">
-    <span class="cerrar" (click)="cerrarModalCrear()">&times;</span>
+    <span class="cerrar" (click)="cerrarModalProveedorCrear()">&times;</span>
     <h2>Crear Proveedor</h2>
-    <form id="formCrear">
+    <!-- Formulario -->
+    <label>RUT:</label>
+    <input type="text" [(ngModel)]="nuevoProveedor.rut" name="rut" required>
+
+    <label>Razón Social:</label>
+    <input type="text" [(ngModel)]="nuevoProveedor.razonSocial" name="razonSocial" required>
+
+    <label>Dirección:</label>
+    <input type="text" [(ngModel)]="nuevoProveedor.direccion" name="direccion" required>
+
+    <label>Comuna:</label>
+    <input type="text" [(ngModel)]="nuevoProveedor.comuna" name="comuna" required>
+
+    <label>Teléfono:</label>
+    <input type="tel" [(ngModel)]="nuevoProveedor.telefono" name="telefono" required>
+
+    <label>Correo:</label>
+    <input type="email" [(ngModel)]="nuevoProveedor.correo" name="correo" required>
+
+    <label>Representante:</label>
+    <input type="text" [(ngModel)]="nuevoProveedor.representante" name="representante" required>
+
+    <div class="botones">
+      <button type="button" (click)="cerrarModalProveedorCrear()">Cancelar</button>
+      <button type="submit" (click)="crearProveedor()">Crear Proveedor</button>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal Editar -->
+<div id="modalEditar" class="modal" [ngClass]="{'show': showModalEditar}">
+  <div class="modal-content">
+    <span class="cerrar" (click)="actualizarProveedor()">&times;</span>
+    <h2>Actualizar Proveedor</h2>
+    <form (ngSubmit)="actualizarElProveedor()">
       <label>RUT:</label>
-      <input type="text" id="rut" required>
+      <input type="text" [(ngModel)]="proveedorActual.rut" name="rut" required>
 
       <label>Razón Social:</label>
-      <input type="text" id="razon_social" required>
+      <input type="text" [(ngModel)]="proveedorActual.razon_social" name="razon_social" required>
 
       <label>Dirección:</label>
-      <input type="text" id="direccion" required>
+      <input type="text" [(ngModel)]="proveedorActual.direccion" name="direccion" required>
 
       <label>Comuna:</label>
-      <input type="number" id="comuna" required>
+      <input type="text" [(ngModel)]="proveedorActual.comuna" name="comuna" required>
 
       <label>Teléfono:</label>
-      <input type="tel" id="telefono" required>
+      <input type="tel" [(ngModel)]="proveedorActual.telefono" name="telefono" required>
 
       <label>Correo:</label>
-      <input type="email" id="correo" required>
+      <input type="email" [(ngModel)]="proveedorActual.correo" name="correo" required>
 
       <label>Representante:</label>
-      <input type="number" id="representante" required>
+      <input type="text" [(ngModel)]="proveedorActual.representante" name="representante" required>
 
       <div class="botones">
-        <button type="button" (click)="cerrarModalCrear()">Cancelar</button>
-        <button type="submit">Crear Usuario</button>
+        <button type="button" (click)="cancelarActualizacion()">Cancelar</button>
+        <button type="submit" (click)="actualizarElProveedor()">Actualizar Proveedor</button>
       </div>
     </form>
+  </div>
+</div>
+
+
+<!-- Modal Eliminar -->
+<div id="modalEliminar" class="modal" [ngClass]="{'show': modalAbiertoEliminar}">
+  <div class="modal-content">
+    <span class="cerrar" (click)="eliminarProveedor()">&times;</span>
+    <h2>¿Estás seguro de que deseas eliminar los siguientes proveedores?</h2>
+    <p>{{ idsProveedoresEliminar }}</p>
+    <div class="botones">
+      <button type="button" (click)="cerrarModalEliminar()">Cancelar</button>
+      <button type="button" (click)="confirmarEliminacion()">Confirmar</button>
+    </div>
   </div>
 </div>
